--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>TheLotteryGenieAngular</title>
@@ -8,7 +9,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
+  <script>
+    let lamp2 = document.getElementById('lamp');
+
+    lamp2.addEventListener('mouseover', (event) => {
+      alert("The Genie has been been summoned!")
+      location.href = '/auth/login'
+    });</script>
   <app-root></app-root>
 </body>
+
 </html>
