updated login form with fancy colors

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,8 @@
   <script src="https://unpkg.com/systemjs@0.19.39/dist/system.src.js"></script>
 
   <!-- 2. Configure SystemJS -->
-  <script src="https://cdn.rawgit.com/angular/angular.io/.../systemjs.config.web.js"></script>
+  <!-- this raw git cdn is causing an error -->
+  <!-- <script src="https://cdn.rawgit.com/angular/angular.io/.../systemjs.config.web.js"></script> -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
